force-app/main/default/objects/Profile_Shared__c/Profile_Shared__c.object-meta.xml
<CustomObject>
    <label>Profile Shared</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profiles Shared</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>