force-app/main/default/objects/Profile_Shared__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Profiles Shared</relationshipLabel>
    <relationshipName>Profiles_Shared</relationshipName>
    <type>Lookup</type>
</CustomField>