force-app/main/default/objects/Profile_Shared__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Profiles Shared</relationshipLabel>
    <relationshipName>Profiles_Shared</relationshipName>
    <type>Lookup</type>
</CustomField>