force-app/main/default/objects/Profile_Shared__c/fields/JD__c.field-meta.xml
<CustomField>
    <fullName>JD__c</fullName>
    <label>JD</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>