force-app/main/default/objects/Profile_Shared__c/fields/Share_Date__c.field-meta.xml
<CustomField>
    <fullName>Share_Date__c</fullName>
    <label>Share Date</label>
    <type>Date</type>
</CustomField>