force-app/main/default/objects/Profile_Shared__c/fields/Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required__c</fullName>
    <label>Skills Required</label>
    <type>TextArea</type>
</CustomField>