force-app/main/default/objects/Profile_Shared__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Employee__c</columns>
    <columns>Share_Date__c</columns>
    <columns>Profile__c</columns>
    <columns>Skills_Required__c</columns>
    <columns>Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>